--- a/styles/main.css
+++ b/styles/main.css
@@ -3,9 +3,40 @@ body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
 }
 
-nav a {
+@media only screen and (max-width: 800px) {
+  nav {
+    justify-content: center;
+  }
+
+  a {
+    display: block;
+  }
+}
+
+header {
+  clear: both;
   display: block;
+}
+
+nav {
+  display: block;
+  text-align: center;
+}
+
+a {
   padding-bottom: 0.5em;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
 }
