--- a/assets/index.css
+++ b/assets/index.css
@@ -31,9 +31,13 @@ img {
   display: block;
   width: 100%;
   max-width: 20em;
+  max-height: 20em;
   height: auto;
   margin-bottom: .67em;
   border-radius: 0.1em;
+
+  animation: easeIn 1s;
+  animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .img--hidden {
@@ -47,11 +51,24 @@ nav {
 
 a {
   color: black;
-  /*padding-bottom: 0.5em;*/
+  margin-bottom: .67em;
   text-decoration: none;
   cursor: pointer;
 }
 
 a:hover {
   color: red;
+}
+
+@keyframes easeIn {
+  0% {
+    height: 0;
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    height: 20em;
+    transform: scale(1);
+    opacity: 1;
+  }
 }
