--- a/assets/index.css
+++ b/assets/index.css
@@ -41,7 +41,11 @@ img {
 }
 
 .img--hidden {
-  display: none;
+  visibility: hidden;
+  height: 0px;
+
+  animation: easeOut 1s;
+  animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 nav {
@@ -64,11 +68,20 @@ a:hover {
   0% {
     height: 0;
     transform: scale(0);
-    opacity: 0;
   }
   100% {
     height: 20em;
     transform: scale(1);
-    opacity: 1;
+  }
+}
+
+@keyframes easeOut {
+  0% {
+    height: 20em;
+    transform: scale(1);
+  }
+  100% {
+    height: 0;
+    transform: scale(0);
   }
 }
