good enough for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,16 +36,12 @@
   <script src='assets/scripts/index.js'></script>
 </head>
 <body>
-  <header>
+  <header class="header">
     {% include header.html %}
   </header>
 
   <main>
     {{ content }}
   </main>
-
-  <footer>
-    {% include footer.html %}
-  </footer>
 </body>
 </html>
