--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <nav>
-  <a href="/">
+  <a href="/"
+     class="nav-link">
     Home
   </a>
-  <a href="/about">
-    About
-  </a>
-  <a href="/posts">
+  <span>|</span>
+  <a href="/posts"
+     class="nav-link">
     Posts
   </a>
 </nav>
