--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -3,8 +3,10 @@ body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
 
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,19 +24,48 @@ body {
   }
 }
 
-header {
-  clear: both;
-  display: block;
+main {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  padding: 1rem;
+  max-width: 60rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+.header {
+  position: fixed;
+  right: 0;
+  top: 0;
+
+  background: white;
+  padding: 1em;
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+.nav-link--main {
+  color: red;
+}
+
+.centered {
+  align-self: center;
+  text-align: center;
 }
 
 img {
   display: block;
   width: 100%;
-  max-width: 20em;
-  max-height: 20em;
+  max-width: 20rem;
+  max-height: 20rem;
   height: auto;
-  margin-bottom: .67em;
-  border-radius: 0.1em;
+  margin-bottom: .67rem;
+  border-radius: 0.1rem;
 
   animation: easeIn 1s;
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
@@ -56,7 +87,7 @@ nav {
 a {
   color: black;
   margin-bottom: .67em;
-  text-decoration: none;
+  text-decoration: underline;
   cursor: pointer;
 }
 
