--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
     Home
   </a>
   <span>|</span>
-  <a href="/posts"
+  <a href="/pages"
      class="nav-link">
-    Posts
+    Pages
   </a>
 </nav>
