great stuff pt 1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 
 <html lang='en'>
 <head>
-  <title>Chris Hancock | Developer</title>
+  <title>Chris Hancock</title>
 
   <base href="/">
 
@@ -35,12 +35,13 @@
   <script src="assets/scripts/ga.js"></script>
   <script src='assets/scripts/index.js'></script>
 </head>
+
 <body>
   <header class="header">
     {% include header.html %}
   </header>
 
-  <main>
+  <main class="main">
     {{ content }}
   </main>
 </body>
