--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,6 +11,7 @@ body {
 
   min-width: 100%;
   min-height: 100%;
+  line-height: 1.5em;
 }
 
 body {
@@ -37,6 +38,7 @@ main {
   background: white;
   border-radius: 2rem;
   margin: 3rem 0;
+  box-shadow: 0 0 3px 1px gray;
 }
 
 h1 {
@@ -122,6 +124,10 @@ a:hover {
     height: 0;
     transform: scale(0);
   }
+}
+
+.post {
+  padding: 1em 0;
 }
 
 .post-header {
