--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -23,6 +23,16 @@ code {
   padding: 0.25em;
 }
 
+blockquote {
+  background: #D1D5D8;
+  border-radius: 0.5em;
+}
+
+blockquote p {
+  padding: 1em;
+  margin: 0;
+}
+
 @media only screen and (max-width: 800px) {
   nav {
     justify-content: center;
