--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,14 @@
   <main class="main">
     {{ content }}
   </main>
+
+  <footer class="centered">
+    <span>
+      Chris Hancock |
+    </span>
+    <a href="mailto:hi@chancock.com">
+      hi@chancock.com
+    </a>
+  </footer>
 </body>
 </html>
