--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,13 @@
-<nav>
-  <a href="/"
-     class="nav-link">
-    Home
-  </a>
-  <span>|</span>
-  <a href="/pages"
-     class="nav-link">
-    Pages
-  </a>
-</nav>
+<header class="layout__header">
+  <nav>
+    <a href="/"
+       class="link--nav">
+      Home
+    </a>
+    <span>|</span>
+    <a href="/pages"
+       class="link--nav">
+      Pages
+    </a>
+  </nav>
+</header>
