--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
   <meta charset='utf-8'>
   <meta name='description'
-        content='Chris builds beautiful websites from Brooklyn, NY'>
+        content='Building websites from Brooklyn, NY.'>
   <meta name='author'
         content='Chris Hancock'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
   </script>
 
   <link rel='stylesheet'
-        href='assets/styles/index.css'>
+        href='css/index.css'>
   <link rel='shortcut icon'
         type='image/png'
         href='assets/images/favicon.png'>
@@ -36,22 +36,14 @@
   <script src='assets/scripts/index.js'></script>
 </head>
 
-<body>
-  <header class="header">
+<body class="layout">
     {% include header.html %}
   </header>
 
-  <main class="main">
+  <main class="layout__main">
     {{ content }}
   </main>
 
-  <footer class="centered">
-    <span>
-      Chris Hancock |
-    </span>
-    <a href="mailto:hi@chancock.com">
-      hi@chancock.com
-    </a>
-  </footer>
+  {% include footer.html %}
 </body>
 </html>
