more good looking

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,18 @@
 <footer class="layout__footer">
   <span>
-    Chris Hancock |
+    Chris Hancock
   </span>
+
+  <span>|</span>
+
+  <span>
+    <a class="link--plain" href="https://github.com/{{ site.github_username }}">
+      <i class="fa fa-github"></i>
+    </a>
+  </span>
+
+  <span>|</span>
+
   <a href="mailto:hi@chancock.com">
     hi@chancock.com
   </a>
