--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 
   <link rel='stylesheet'
         href='css/index.css'>
+  <link rel="stylesheet"
+        href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
   <link rel='shortcut icon'
         type='image/png'
         href='assets/images/favicon.png'>
