--- a/_sass/blocks/_home.scss
+++ b/_sass/blocks/_home.scss
@@ -2,5 +2,8 @@
   @extend .box--large;
   @extend .shadow;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   align-self: center;
 }
